# repro-lto-error

./: .gitignore  CMakeLists.txt  Makefile  main.c  original-log.txt  table.c  table.h
